some more testing

--- a/README
+++ b/README
@@ -2,4 +2,4 @@ Script to convert a directory of music files from one format to another, preserv
 
 For now, mostly a sandbox project for learning git and github. But you may still find it useful.
 
-Wow, github seems to autoupdate it's repo view when pushes are made. Neat!
+Wow, github seems to autoupdate it's repo view when pushes are made. Or did it?
